<resources>
    <string name="app_name">MotoTracker</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="maintenanceLog">Maintenance Log</string>
    <string name="maintenanceLog_named">Maintenance Log - %1$s </string>
    <string name="dashboard">Dashboard</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_named">Statistics - %1$s </string>
    <string name="accountProfile">Account Profile</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="carManager">Car Manager</string>
    <string name="emailPlaceholder">example@example.com</string>
    <string name="add">Add</string>
    <string name="addCar">Add Car</string>
    <string name="name">Name</string>
    <string name="year">Year</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="miles">Miles</string>
    <string name="milesFormat">Miles: %1$s</string>
    <string name="selectedParentheses">(Selected)</string>
    <string name="deleteConfirmation">Are you sure you want to Delete?</string>
    <string name="deleteConfirmation2">Type Car Name to Confirm.</string>
    <string name="deleteCarForever">Delete Car Forever</string>
    <string name="type">Type</string>
    <string name="costDollars">Cost $</string>
    <string name="gallons">Gallons</string>
    <string name="gallonsFormat">Gallons: %1$s</string>
    <string name="odometer">Odometer</string>
    <string name="notes">Notes</string>
    <string name="addMaintenance">Add Maintenance</string>
    <string name="date">Date</string>
    <string name="costFormat">Cost: %1$s</string>
    <string name="cost">Cost</string>
    <string name="next20">Next 20</string>
    <string name="previous20">Previous 20</string>
    <string name="pageDetailPlaceholder">x / x</string>
    <string name="pageDetail">%1$d / %2$d</string>
    <string name="deleteMaintenanceLogEntry">Delete Maintenance Log Entry</string>
    <string name="defaultErrorMessage">Default Error Message</string>
    <string name="nameIsRequired">%1$s is required.</string>
    <string name="nameMaxLength">%1$s has a max length of %2$d characters.</string>
    <string name="yearMinMessage">Year has to be greater than 1900.</string>
    <string name="yearMaxMessage">Year has to be less than %1$d.</string>
    <string name="milesToSmall">Miles needs to be greater or equal to the current cars miles.</string>
    <string name="fuel">Fuel</string>
    <string name="totalCosts">Total Costs</string>
    <string name="totalCostsFormat">Total Costs: %1$s</string>
    <string name="milesPerGallon">Miles Per Gallon</string>
    <string name="milesPerGallonFormat">Miles Per Gallon: %1$s</string>
    <string name="dollarsPerGallon">Dollars Per Gallon</string>
    <string name="dollarsPerGallonFormat">Dollars Per Gallon: %1$s</string>
    <string name="dollarsPerMile">Dollars Per Mile</string>
    <string name="dollarsPerMileFormat">Dollars Per Mile: %1$s</string>
    <string name="oilChange">Oil Change</string>
    <string name="oilChangeTime">Oil Change Time</string>
    <string name="oilChangeMiles">Oil Change Miles</string>
    <string name="tireRotation">Tire Rotation</string>
    <string name="tireRotationTime">Tire Rotation Time</string>
    <string name="tireRotationMiles">Tire Rotation Miles</string>
    <string name="airFilter">Air Filter</string>
    <string name="airFilterTime">Air Filter Time</string>
    <string name="airFilterMiles">Air Filter Miles</string>
    <string name="inspection">Inspection</string>
    <string name="inspectionTime">Inspection Time</string>
    <string name="registration">Registration</string>
    <string name="registrationTime">Registration Time</string>
    <string name="timeSinceLastFormat">Time Since: %1$s</string>
    <string name="milesSinceLastFormat">Miles Since: %1$d</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="email">Email</string>
    <string name="permissions">Permissions</string>
    <string name="noEmailAccount">There is no account attached to that email.</string>
    <string name="successShareCar">Shared Successfully.</string>
    <string name="deleteSharedConfirmation">Are you sure you want to remove Your access to this car?</string>
    <string name="removeMyAccess">Remove My Access</string>
    <string name="graphs">Graphs</string>
    <string name="gasPump">Gas Pump</string>
    <string name="HomeFragmentParagraph">Dashboard\nDisplays basic information about the selected car including:\n
* Car Info\n
* Car Image\n
* Fuel Stats\n
* Time and Miles since for all the routine maintenance categories\n\nMaintenance Log\nUsed to manage all of the cars maintenance data and can be used to:\n
* Add Maintenance of any of the following types, Fuel, Maintenance, Oil Change, Tire Rotation, Air Filter, Inspection, and Registration\n
* View and Filter all the maintenance entries in each category\n
* When adding maintenance you can use the phone camera to take a picture of the odometer on the car and the gas pump to fill in some of the form fields automatically\n
* Delete Maintenance entry\'s with a long tap\n\nStatistics\nThe Statistics Page is used to view graphs related to fuel economy including:\n
* Miles Per Gallon\n
* Dollars Per Gallon\n
* Dollars Per Mile\n\nCar Manager\nThe Car Manager is used to:\n
* Add Cars\n
* Add images to cars\n
* Share cars with other users\n
* Select which car you are currently using\n
* Delete Cars with a long tap\n</string>
    <string name="failedConnection">Failed To Connect to Server</string>
</resources>