<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dashboard_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:paddingTop="8dp"
            android:paddingBottom="0dp"
            android:textSize="18sp"
            android:text="@string/dashboard" />

        <androidx.cardview.widget.CardView
            android:id="@+id/dashboard_car_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_margin="8dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/md_theme_primaryContainer_mediumContrast">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/dashboard_car_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="24sp"
                    android:paddingTop="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dashboard_car_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:textSize="16sp"
                    android:paddingTop="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintStart_toStartOf="@id/dashboard_car_name"
                    app:layout_constraintTop_toBottomOf="@id/dashboard_car_name" />

                <TextView
                    android:id="@+id/dashboard_car_make"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/make"
                    android:textSize="16sp"
                    android:paddingTop="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintStart_toEndOf="@id/dashboard_car_year"
                    app:layout_constraintTop_toBottomOf="@id/dashboard_car_name" />

                <TextView
                    android:id="@+id/dashboard_car_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/model"
                    android:textSize="16sp"
                    android:paddingTop="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintStart_toEndOf="@id/dashboard_car_make"
                    app:layout_constraintTop_toBottomOf="@id/dashboard_car_name" />

                <TextView
                    android:id="@+id/dashboard_car_total_costs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totalCosts"
                    android:textSize="16sp"
                    android:paddingTop="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintStart_toStartOf="@+id/dashboard_car_year"
                    app:layout_constraintTop_toBottomOf="@id/dashboard_car_year" />

                <TextView
                    android:id="@+id/dashboard_car_miles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miles"
                    android:textSize="16sp"
                    android:padding="16dp"
                    app:layout_constraintStart_toStartOf="@+id/dashboard_car_total_costs"
                    app:layout_constraintTop_toBottomOf="@id/dashboard_car_total_costs" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/dashboard_fuel_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_margin="8dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/md_theme_primaryContainer_mediumContrast">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/dashboard_fuel_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fuel"
                    android:textSize="24sp"
                    android:paddingTop="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dashboard_fuel_mpg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/milesPerGallon"
                    android:textSize="16sp"
                    android:paddingTop="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintStart_toStartOf="@id/dashboard_fuel_title"
                    app:layout_constraintTop_toBottomOf="@id/dashboard_fuel_title" />

                <TextView
                    android:id="@+id/dashboard_fuel_dpg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dollarsPerGallon"
                    android:textSize="16sp"
                    android:paddingTop="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintStart_toStartOf="@id/dashboard_fuel_mpg"
                    app:layout_constraintTop_toBottomOf="@id/dashboard_fuel_mpg" />

                <TextView
                    android:id="@+id/dashboard_fuel_dpm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dollarsPerMile"
                    android:textSize="16sp"
                    android:padding="16dp"
                    app:layout_constraintStart_toStartOf="@id/dashboard_fuel_dpg"
                    app:layout_constraintTop_toBottomOf="@id/dashboard_fuel_dpg" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>