<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/car_manager_row_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/md_theme_primaryContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/car_manager_row_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="24sp"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/car_manager_row_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectedParentheses"
                android:textSize="16sp"
                android:paddingTop="16dp"
                app:layout_constraintStart_toEndOf="@id/car_manager_row_name"
                app:layout_constraintTop_toTopOf="@id/car_manager_row_name" />

            <ImageView
                android:id="@+id/car_manager_row_image"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:src="@drawable/baseline_directions_car_24"
                app:layout_constraintStart_toStartOf="@id/car_manager_row_name"
                app:layout_constraintTop_toBottomOf="@+id/car_manager_row_name"
                app:layout_constraintBottom_toBottomOf="@id/car_manager_row_miles"/>

            <TextView
                android:id="@+id/car_manager_row_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textSize="16sp"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintStart_toEndOf="@id/car_manager_row_image"
                app:layout_constraintTop_toBottomOf="@id/car_manager_row_name" />

            <TextView
                android:id="@+id/car_manager_row_make"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make"
                android:textSize="16sp"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintStart_toEndOf="@id/car_manager_row_year"
                app:layout_constraintTop_toBottomOf="@id/car_manager_row_name" />

            <TextView
                android:id="@+id/car_manager_row_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/model"
                android:textSize="16sp"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintStart_toEndOf="@id/car_manager_row_make"
                app:layout_constraintTop_toBottomOf="@id/car_manager_row_name" />


            <TextView
                android:id="@+id/car_manager_row_miles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miles"
                android:textSize="16sp"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="@+id/car_manager_row_year"
                app:layout_constraintTop_toBottomOf="@id/car_manager_row_year" />

            <Button
                android:id="@+id/car_manager_share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:padding="8dp"
                android:backgroundTint="@color/md_theme_primary"
                android:textColor="@color/md_theme_onPrimary"
                app:layout_constraintStart_toStartOf="@id/car_manager_row_image"
                app:layout_constraintTop_toBottomOf="@id/car_manager_row_miles" />

            <Button
                android:id="@+id/car_manager_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:padding="8dp"
                android:backgroundTint="@color/md_theme_secondary"
                android:textColor="@color/md_theme_onPrimary"
                app:layout_constraintStart_toEndOf="@id/car_manager_share_button"
                app:layout_constraintTop_toBottomOf="@id/car_manager_row_miles" />

            <Button
                android:id="@+id/car_manager_delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:padding="8dp"
                android:backgroundTint="@color/md_theme_tertiary"
                android:textColor="@color/md_theme_onPrimary"
                app:layout_constraintStart_toEndOf="@id/car_manager_edit_button"
                app:layout_constraintTop_toBottomOf="@id/car_manager_row_miles" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>