<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MaintenanceLogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/maintenance_log_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:paddingTop="8dp"
            android:paddingBottom="0dp"
            android:textSize="18sp"
            android:text="@string/maintenanceLog" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:width="70dp"
                android:text="@string/type"
                android:paddingBottom="12dp"
                android:paddingTop="12dp" />

            <Spinner
                android:id="@+id/filter_service_types_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:paddingBottom="14dp"
                android:paddingTop="14dp" />

        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:id="@+id/maintenance_log_paging_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/maintenance_log_paging_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="140dp"
                android:backgroundTint="@color/md_theme_primary"
                android:textColor="@color/md_theme_onPrimary"
                android:text="@string/previous20" />

            <TextView
                android:id="@+id/maintenance_log_paging_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="8dp"
                android:text="@string/pageDetailPlaceholder"/>

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/maintenance_log_paging_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="140dp"
                android:backgroundTint="@color/md_theme_primary"
                android:textColor="@color/md_theme_onPrimary"
                android:text="@string/next20"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/maintenance_log_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_maintenance_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:backgroundTint="@color/md_theme_primary"
        android:elevation="16dp"
        android:contentDescription="@string/add"
        android:src="@drawable/plus_large_svgrepo_com" />

</FrameLayout>