<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/md_theme_secondaryContainer"
    android:padding="16dp"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="110dp"
            android:textSize="20sp"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/share_car_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:width="350dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine|textEmailAddress" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:textSize="20sp"
            android:text="@string/permissions"/>

        <Spinner
            android:id="@+id/share_car_permissions_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:width="200dp"
            android:height="48dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/share_car_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="350dp"
            android:textSize="20sp"
            android:padding="14dp"
            android:visibility="gone"
            android:background="@color/md_theme_errorContainer"
            android:text="@string/defaultErrorMessage"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/share_car_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:layout_marginEnd="14dp"
            android:backgroundTint="@color/md_theme_secondary"
            android:text="@string/close"/>

        <Button
            android:id="@+id/share_car_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:backgroundTint="@color/md_theme_primary"
            android:text="@string/share"/>

    </LinearLayout>

</LinearLayout>